--- a/views/add-student.pug
+++ b/views/add-student.pug
@@ -1,6 +1,6 @@
 include header.pug
 
-h1 Register New DevOps Student 2024-2025
+h1 Register New SoftUni DevOps Student 2024-2025
 form(method='POST' action='/add-student')
   div
     label(for='name') Name: 
